// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 1`] = `
<div
  className="a b c d"
>
  Hello
</div>
`;

exports[`should render 1 button 1`] = `
<div
  className="a b c d"
>
  <button
    className="e f g h i j k l m n o p q r s t u v a w x y z ab ac ad ae af ag ah ai aj ak b al am an ao ap aq ar as at"
    disabled={undefined}
    onClick={[Function]}
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`should render 1 button 2`] = `
"
.a {
  display: inline-block
}

.b {
  position: relative
}

.c {
  vertical-align: middle
}

.d {
  white-space: nowrap
}

.e:hover {
  background-color: #2869a2
}

.f:hover {
  border-color: #215685
}

.g:hover {
  color: #fff
}

.h:active {
  background-color: #215685
}

.i:active {
  border-color: #1a4468
}

.j:active {
  color: #fff
}

.k:focus {
  background-color: #2f7bbf
}

.l:focus {
  color: #fff
}

.m:focus {
  border-color: #2869a2
}

.n[title] {
  pointer-events: none
}

.o {
  background-color: #2f7bbf
}

.p {
  border-bottom: 1px solid
}

.q {
  border-color: #2869a2
}

.r {
  border-left: 0px
}

.s {
  border-right: 0px
}

.t {
  border-top: 0px
}

.u {
  color: #fff
}

.v {
  cursor: pointer
}

.w {
  font-family: \\"Open Sans\\", Helvetica, Arial, sans-serif
}

.x {
  font-size: 0.9333333333333333rem
}

.y {
  font-weight: 400
}

.z {
  line-height: 1.2
}

.ab {
  margin-bottom: 0px
}

.ac {
  margin-right: 0px
}

.ad {
  margin-top: 0px
}

.ae {
  margin-left: 0px
}

.af {
  opacity: inherit
}

.ag {
  padding-bottom: 0.53em
}

.ah {
  padding-left: 1em
}

.ai {
  padding-right: 1em
}

.aj {
  padding-top: 0.6em
}

.ak {
  pointer-events: auto
}

.al {
  border-top-right-radius: 2px
}

.am {
  border-top-left-radius: 0px
}

.an {
  border-bottom-left-radius: 0px
}

.ao {
  border-bottom-right-radius: 2px
}

.ap {
  text-align: center
}

.aq {
  transition: all 200ms ease;
  -webkit-transition: all 200ms ease;
  -moz-transition: all 200ms ease
}

.ar {
  user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none
}

.as {
  float: none
}

.at {
  max-width: initial
}
"
`;

exports[`should render 2`] = `
"
.a {
  display: inline-block
}

.b {
  position: relative
}

.c {
  vertical-align: middle
}

.d {
  white-space: nowrap
}
"
`;

exports[`should render 2 buttons 1`] = `
<div
  className="a b c d"
>
  <button
    className="e f g h i j k l m n o p q r s t u v a w x y z ab ac ad ae af ag ah ai aj ak b al am an ao ap aq ar as at"
    disabled={undefined}
    onClick={[Function]}
    type="button"
  >
    Button
  </button>
  <button
    className="e f g h i j k  l  m n o p  q r s  t  u v a w x y z ab ac ad ae af ag ah ai aj ak b au av aw ax ap aq ar as at"
    disabled={undefined}
    onClick={[Function]}
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`should render 2 buttons 2`] = `
"
.a {
  display: inline-block
}

.b {
  position: relative
}

.c {
  vertical-align: middle
}

.d {
  white-space: nowrap
}

.e:hover {
  background-color: #2869a2
}

.f:hover {
  border-color: #215685
}

.g:hover {
  color: #fff
}

.h:active {
  background-color: #215685
}

.i:active {
  border-color: #1a4468
}

.j:active {
  color: #fff
}

.k:focus {
  background-color: #2f7bbf
}

.l:focus {
  color: #fff
}

.m:focus {
  border-color: #2869a2
}

.n[title] {
  pointer-events: none
}

.o {
  background-color: #2f7bbf
}

.p {
  border-bottom: 1px solid
}

.q {
  border-color: #2869a2
}

.r {
  border-left: 0px
}

.s {
  border-right: 0px
}

.t {
  border-top: 0px
}

.u {
  color: #fff
}

.v {
  cursor: pointer
}

.w {
  font-family: \\"Open Sans\\", Helvetica, Arial, sans-serif
}

.x {
  font-size: 0.9333333333333333rem
}

.y {
  font-weight: 400
}

.z {
  line-height: 1.2
}

.ab {
  margin-bottom: 0px
}

.ac {
  margin-right: 0px
}

.ad {
  margin-top: 0px
}

.ae {
  margin-left: 0px
}

.af {
  opacity: inherit
}

.ag {
  padding-bottom: 0.53em
}

.ah {
  padding-left: 1em
}

.ai {
  padding-right: 1em
}

.aj {
  padding-top: 0.6em
}

.ak {
  pointer-events: auto
}

.al {
  border-top-right-radius: 0px
}

.am {
  border-top-left-radius: 2px
}

.an {
  border-bottom-left-radius: 2px
}

.ao {
  border-bottom-right-radius: 0px
}

.ap {
  text-align: center
}

.aq {
  transition: all 200ms ease;
  -webkit-transition: all 200ms ease;
  -moz-transition: all 200ms ease
}

.ar {
  user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none
}

.as {
  float: none
}

.at {
  max-width: initial
}

.au {
  border-top-right-radius: 2px
}

.av {
  border-top-left-radius: 0px
}

.aw {
  border-bottom-left-radius: 0px
}

.ax {
  border-bottom-right-radius: 2px
}
"
`;

exports[`should render 3 buttons 1`] = `
<div
  className="a b c d"
>
  <button
    className="e f g h i j k l m n o p q r s t u v a w x y z ab ac ad ae af ag ah ai aj ak b al am an ao ap aq ar as at"
    disabled={undefined}
    onClick={[Function]}
    type="button"
  >
    Button
  </button>
  <button
    className="e f g h i j k  l  m n o p  q r s  t  u v a w x y z ab ac ad ae af ag ah ai aj ak b al au av ao ap aq ar as at"
    disabled={undefined}
    onClick={[Function]}
    type="button"
  >
    Button
  </button>
  <button
    className="e f g h i j k  l  m n o p  q r s  t  u v a w x y z ab ac ad ae af ag ah ai aj ak b aw au av ax ap aq ar as at"
    disabled={undefined}
    onClick={[Function]}
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`should render 3 buttons 2`] = `
"
.a {
  display: inline-block
}

.b {
  position: relative
}

.c {
  vertical-align: middle
}

.d {
  white-space: nowrap
}

.e:hover {
  background-color: #2869a2
}

.f:hover {
  border-color: #215685
}

.g:hover {
  color: #fff
}

.h:active {
  background-color: #215685
}

.i:active {
  border-color: #1a4468
}

.j:active {
  color: #fff
}

.k:focus {
  background-color: #2f7bbf
}

.l:focus {
  color: #fff
}

.m:focus {
  border-color: #2869a2
}

.n[title] {
  pointer-events: none
}

.o {
  background-color: #2f7bbf
}

.p {
  border-bottom: 1px solid
}

.q {
  border-color: #2869a2
}

.r {
  border-left: 0px
}

.s {
  border-right: 0px
}

.t {
  border-top: 0px
}

.u {
  color: #fff
}

.v {
  cursor: pointer
}

.w {
  font-family: \\"Open Sans\\", Helvetica, Arial, sans-serif
}

.x {
  font-size: 0.9333333333333333rem
}

.y {
  font-weight: 400
}

.z {
  line-height: 1.2
}

.ab {
  margin-bottom: 0px
}

.ac {
  margin-right: 0px
}

.ad {
  margin-top: 0px
}

.ae {
  margin-left: 0px
}

.af {
  opacity: inherit
}

.ag {
  padding-bottom: 0.53em
}

.ah {
  padding-left: 1em
}

.ai {
  padding-right: 1em
}

.aj {
  padding-top: 0.6em
}

.ak {
  pointer-events: auto
}

.al {
  border-top-right-radius: 0px
}

.am {
  border-top-left-radius: 2px
}

.an {
  border-bottom-left-radius: 2px
}

.ao {
  border-bottom-right-radius: 0px
}

.ap {
  text-align: center
}

.aq {
  transition: all 200ms ease;
  -webkit-transition: all 200ms ease;
  -moz-transition: all 200ms ease
}

.ar {
  user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none
}

.as {
  float: none
}

.at {
  max-width: initial
}

.au {
  border-top-left-radius: 0px
}

.av {
  border-bottom-left-radius: 0px
}

.aw {
  border-top-right-radius: 2px
}

.ax {
  border-bottom-right-radius: 2px
}
"
`;

exports[`should render 3 buttons with spacing 1`] = `
<div
  className="a b c d"
>
  <button
    className="e f g h i j k l m n o p q r s t u v a w x y z ab ac ad ae af ag ah ai aj ak b al am an ao ap aq"
    disabled={undefined}
    onClick={[Function]}
    type="button"
  >
    Button
  </button>
  <button
    className="e f g h i j k  l  m n o p  q r s  t  u v a w x y z ab ac ad ar af ag ah ai aj ak b al am an ao ap aq"
    disabled={undefined}
    onClick={[Function]}
    type="button"
  >
    Button
  </button>
  <button
    className="e f g h i j k  l  m n o p  q r s  t  u v a w x y z ab ac ad ar af ag ah ai aj ak b al am an ao ap aq"
    disabled={undefined}
    onClick={[Function]}
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`should render 3 buttons with spacing 2`] = `
"
.a {
  display: inline-block
}

.b {
  position: relative
}

.c {
  vertical-align: middle
}

.d {
  white-space: nowrap
}

.e:hover {
  background-color: #2869a2
}

.f:hover {
  border-color: #215685
}

.g:hover {
  color: #fff
}

.h:active {
  background-color: #215685
}

.i:active {
  border-color: #1a4468
}

.j:active {
  color: #fff
}

.k:focus {
  background-color: #2f7bbf
}

.l:focus {
  color: #fff
}

.m:focus {
  border-color: #2869a2
}

.n[title] {
  pointer-events: none
}

.o {
  background-color: #2f7bbf
}

.p {
  border-bottom: 1px solid
}

.q {
  border-color: #2869a2
}

.r {
  border-left: 0px
}

.s {
  border-right: 0px
}

.t {
  border-top: 0px
}

.u {
  color: #fff
}

.v {
  cursor: pointer
}

.w {
  font-family: \\"Open Sans\\", Helvetica, Arial, sans-serif
}

.x {
  font-size: 0.9333333333333333rem
}

.y {
  font-weight: 400
}

.z {
  line-height: 1.2
}

.ab {
  margin-bottom: 0px
}

.ac {
  margin-right: 0px
}

.ad {
  margin-top: 0px
}

.ae {
  margin-left: 0px
}

.af {
  opacity: inherit
}

.ag {
  padding-bottom: 0.53em
}

.ah {
  padding-left: 1em
}

.ai {
  padding-right: 1em
}

.aj {
  padding-top: 0.6em
}

.ak {
  pointer-events: auto
}

.al {
  border-radius: 2px
}

.am {
  text-align: center
}

.an {
  transition: all 200ms ease;
  -webkit-transition: all 200ms ease;
  -moz-transition: all 200ms ease
}

.ao {
  user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none
}

.ap {
  float: none
}

.aq {
  max-width: initial
}

.ar {
  margin-left: 0.4rem
}
"
`;
